# AID-PF

./: .gitignore  LICENSE  README.md  zip.sh
presentation/: README.md  presentation.md
report/: mymacros.typ  references.yaml  report.tex  report.typ  uc3mreport.typ
report/parts/: analysis.typ  conclusions.typ  experimentation.typ  introduction.typ  methodology.typ  results.typ
src/: README.md  common.py  models.ipynb  pyproject.toml  stacking.ipynb
