[project]
name = "AID-PF"
authors = [
    { name = "Luis Daniel Casais Mezquida", email = "luisdaniel.casais@alumnos.uc3m.es" },
]
version = "0.1.0"
readme = "README.txt"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "setuptools>=79.0.0",
    "xgboost>=3.0.0",
    "ydata-profiling>=4.16.1",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
